# GlassTrax-Bridge

./: .dockerignore  .env.example  .gitignore  BUILD_AGENT.bat  CLAUDE.md  LICENSE  README.md  RELEASE_NOTES.md  TODO.md  agent_config.example.yaml  alembic.ini  build_agent.ps1  config.example.yaml  docker-compose.yml  env.example  package-lock.json  package.json  pyproject.toml  requirements.txt  run_dev.bat  run_prod.bat
.github/workflows/: docs.yml  release.yml  test.yml
agent/: __init__.py  auth.py  cli.py  config.py  install_service.bat  main.py  query.py  requirements_agent.txt  run_agent.bat  schemas.py  tray_app.py  uninstall_service.bat  updater.py
agent/icons/: generate_icons.py
agent/tests/: __init__.py  conftest.py  test_auth.py  test_main.py  test_query_service.py
agent/tests/mocks/: __init__.py  mock_pyodbc.py
api/: __init__.py  config.py  config_schema.py  database.py  dependencies.py  main.py
api/middleware/: __init__.py  auth.py  logging.py  rate_limit.py
api/models/: __init__.py  access_log.py  api_key.py  tenant.py
api/routers/: __init__.py  customers.py  keys.py  orders.py
api/schemas/: __init__.py  customer.py  key_management.py  order.py  responses.py
api/services/: __init__.py  agent_client.py  agent_schemas.py  cache_service.py  config_service.py  glasstrax.py
api/utils/: __init__.py  custom_logger.py
docker/: Dockerfile  entrypoint.sh  nginx.conf  nginx.conf.template  supervisord.conf
docs/: index.md  package-lock.json  package.json
docs-internal/: AGENT.md  API.md  DEVELOPMENT.md  EXTENDING.md  GLASSTRAX-DATABASE.md  PATTERNS.md  PORTAL.md  README.md  TESTING.md
docs/.vitepress/: config.ts
docs/.vitepress/theme/: index.ts
docs/.vitepress/theme/components/: PasswordHasher.vue
docs/api/: index.md  orders.md
docs/guide/: agent-installation.md  agent-setup.md  api-keys.md  applications.md  authentication.md  configuration.md  deployment.md  getting-started.md  permissions.md
docs/portal/: index.md
migrations/: README.md  env.py  script.py.mako
migrations/versions/: .gitkeep  20260104_0001_initial_schema.py
portal/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts  vitest.setup.ts
portal/src/: App.tsx  index.css
portal/src/__tests__/: test-utils.tsx
portal/src/__tests__/mocks/: handlers.ts  server.ts
portal/src/components/layout/: Layout.tsx  Sidebar.tsx
portal/src/components/ui/: alert.tsx  status-indicator.tsx  tooltip.tsx
portal/src/lib/: api.ts  auth.tsx  theme.tsx
portal/src/lib/__tests__/: api.test.ts
portal/src/pages/: APIKeys.tsx  AccessLogs.tsx  ApiKeys.tsx  Dashboard.tsx  Diagnostics.tsx  Login.tsx  Settings.tsx  Tenants.tsx
portal/src/pages/__tests__/: APIKeys.test.tsx  ApiKeys.test.tsx  Dashboard.test.tsx  Settings.test.tsx
tests/: __init__.py  conftest.py
tests/fixtures/: __init__.py  data.py  factories.py
tests/integration/: __init__.py  test_admin_keys_router.py  test_admin_tenants_router.py  test_customers_router.py  test_orders_router.py
tests/mocks/: __init__.py  mock_agent_client.py  mock_pyodbc.py
tests/unit/: __init__.py  test_api_key_model.py  test_auth_middleware.py  test_config_service.py  test_glasstrax_service.py  test_schema_coercion.py
tools/: inspect.bat  inspect_dsn.py  test_pagination.bat  test_pagination.py
